[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/Tilesets/Library.tres" type="TileSet" id=2]
[ext_resource path="res://HealthUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Roboto-Medium.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 4 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Rooms" type="Node" parent="."]

[node name="MachineParts" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 10, 10 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="TileMap" type="TileMap" parent="."]
show_behind_parent = true
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1

[node name="HealthLayer" type="CanvasLayer" parent="."]

[node name="HealthUI" parent="HealthLayer" instance=ExtResource( 3 )]
margin_left = 899.0
margin_top = 41.2581
margin_right = 349.976
margin_bottom = 73.2581

[node name="LoadingLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Label" type="Label" parent="LoadingLayer"]
anchor_right = 1.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 1 )
text = "LOADING"
align = 1
valign = 1

[editable path="HealthLayer/HealthUI"]
